--- a/compose.yaml
+++ b/compose.yaml
@@ -5,4 +5,6 @@ services:
     working_dir: /go-playground
     volumes:
       - .:/go-playground
+    ports:
+      - 8080:8080
     command: ["make", "run"]
